--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
           environment:
                   - KNEX_CLIENT=pg
                   - DB_NAME=boilerplate
+                  - DB_USERNAME=postgres
                   - DB_PASSWORD=
                   - DB_PORT=5432
                   - PORT=1212
