--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
   postgres:
           container_name: postgresql
           image: postgres:latest
-					environment:
-									POSTGRES_PASSWORD: 123456
-									POSTGRES_USER: postgres
-									POSTGRES_DB: boilerplate
-					volumes:
-									- ./pgdata:/var/lib/postgresql/data
+        environment:
+                POSTGRES_PASSWORD: "123456"
+                POSTGRES_USER: postgres
+                POSTGRES_DB: boilerplate
+        volumes:
+                  - ./pgdata:/var/lib/postgresql/data
           ports:
-                  - 5432:5432
+                  - 5432:5432   
           networks:
                   - exql-network
   express-graphql:
