--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   postgres:
 		image: postgres:latest
-		container_name: postgresql
+		name: postgresql
 		environment:
 			POSTGRES_PASSWORD: postgres
 			POSTGRES_USER: postgres
@@ -17,7 +17,7 @@ services:
 
   express-graphql:
 		image: express-graphql:1.0
-		container_name: express-graphql
+		name: express-graphql
 		ports:
 			- "1212:1212"
 		depends_on:
