--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,28 @@ services:
           - "5432:5432"
          volumes:
           - db_postgres:/var/lib/postgresql/data
+         networks: 
+          - exql-network
+          
+        app:
+         image: "exql"
+         container_name: "express-graphql"
+         depends_on: 
+          - db
+         environment: 
+          - KNEX_CLIENT:"pg"
+          - DB_NAME:"boilerplate"
+          - DB_PASWWORD:"db_postgres"
+          - DB_PORT:"5432"
+          - PORT:"1212"
+          - HOST:"postgressql"
+         ports: 
+          - "1212:1212"
+         networks: 
+          - exql-network 
 
+networks: 
+ exql-network:
+  name: exql-network
 volumes:
         db_postgres:
-
