--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
           - exql-network
           
         app:
-         image: "exql"
+         image: "exql:1.0"
          container_name: "express-graphql"
          depends_on: 
           - db
