--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         db:
          image: "postgres:latest"
          container_name: "postgressql"
-         enviroment:
+         environment:
           POSTGRES_PASSWORD: "db_postgres"
           POSTGRES_USER: "postgres"
          ports:
@@ -19,7 +19,7 @@ services:
          container_name: "express-graphql"
          depends_on: 
           - db
-         enviroment: 
+         environment: 
           - KNEX_CLIENT:pg
           - DB_NAME:boilerplate
           - DB_PASWWORD:db_postgres
