--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
          environment:
           POSTGRES_PASSWORD: postgrespassword
           POSTGRES_USER: root
+          POSTGRES_DB: boilerplate
          ports:
           - "5432:5432"
          volumes:
-          - db_postgres:/var/lib/postgresql/data
+          - pgdata:/var/lib/postgresql/data
          networks: 
           - exql-network
           
@@ -31,14 +32,9 @@ services:
           - "1212:1212"
          networks: 
           - exql-network 
-        adminer:
-          image: "adminer"
-          networks: 
-            - exql-network 
-          ports: 
-           - "1313:1313"
+          
 networks: 
  exql-network:
   name: exql-network
 volumes:
-        db_postgres:
+        pgdata:
