--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
          build:
           context: .
           dockerfile: Dockerfile
+         image: exql:1.0
          container_name: express-graphql
          depends_on:
           - postgressql
