change jenkisfile and docker compose env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
          depends_on:
           - postgressql
          environment:
+          - APP_NAME=EXQL
           - KNEX_CLIENT=pg
           - DB_NAME=boilerplate
           - DB_USERNAME=root
